Drawed map with config & layers defaults parameters

--- a/config/map.layers.yaml
+++ b/config/map.layers.yaml
@@ -10,7 +10,7 @@ layers :
 - map_name : default
   layer_name : IGN Base
   wms_layer : IGNBaseTodo
-  wms_url : http:\/\/www.ign.es\/wms-inspire\/ign-base
+  wms_url : http://www.ign.es/wms-inspire/ign-base
   visible : false
   layer_position : 512
   layer_group : Capas Base
@@ -20,7 +20,7 @@ layers :
 - map_name : default
   layer_name : Topogr\u00e1fico-IDEE
   wms_layer : mtn_rasterizado
-  wms_url : http:\/\/www.idee.es\/wms\/MTN-Raster\/MTN-Raster
+  wms_url : http://www.idee.es/wms/MTN-Raster/MTN-Raster
   visible : false
   layer_position : 510
   layer_group : Capas Base
