Simple test page created.
A simple html page that displays an as of now
ultra-simple map with two WMS layers loaded
from the yaml file. Also fixed a couple of
EventBus calls that remained wrong after the
refactoring.

--- a/config/map.layers.yaml
+++ b/config/map.layers.yaml
@@ -11,18 +11,16 @@ layers :
   layer_name : IGN Base
   wms_layer : IGNBaseTodo
   wms_url : http://www.ign.es/wms-inspire/ign-base
-  visible : false
-  layer_position : 512
-  layer_group : Capas Base
-  parameters : {opacity : 0.75, singleTile : false}
+  visible : true
+  layer_position : 1
+  parameters : {opacity : 0.75, singleTile : false, projection : 'EPSG:23029'}
   is_base : true
 ## Topografico layer
 - map_name : default
-  layer_name : Topogr\u00e1fico-IDEE
+  layer_name : Topográfico-IDEE
   wms_layer : mtn_rasterizado
   wms_url : http://www.idee.es/wms/MTN-Raster/MTN-Raster
-  visible : false
-  layer_position : 510
-  layer_group : Capas Base
-  parameters : {opacity : 0.60, singleTile : false}
+  visible: true
+  layer_position : 2
+  parameters : {opacity : 0.75, singleTile : false, projection : 'EPSG:23029'}
   is_base : true
