Support for IE7.
IE 7 has notable issues with the newlines,
specially with yaml, and also some casting
problems. Yaml files had to be made more
explicit in both aspects.

--- a/config/map.layers.yaml
+++ b/config/map.layers.yaml
@@ -1,26 +1,29 @@
 # Layers parameters to map
 ##########################
-
-## Layer service
-## gets layers from URL with urlServiceLayer, it if '' or null 
-## control loads default layers
-urlServiceLayer : null
-layers :
-## Topografico layer
-- map_name : default
-  layer_name : Topográfico-IDEE
-  wms_layer : mtn_rasterizado
-  wms_url : http://www.idee.es/wms/MTN-Raster/MTN-Raster
-  visible: true
-  layer_position : 2
-  parameters : {opacity : 0.75, singleTile : false, projection : 'EPSG:23029'}
-  is_base : true
-## IGN Layer
-- map_name : default
-  layer_name : IGN Base
-  wms_layer : IGNBaseTodo
-  wms_url : http://www.ign.es/wms-inspire/ign-base
-  visible : true
-  layer_position : 1
-  parameters : {opacity : 0.75, singleTile : false, projection : 'EPSG:23029'}
-  is_base : true
+{
+  ## Layer service
+  ## gets layers from URL with urlServiceLayer, it if '' or null 
+  ## control loads default layers
+  urlServiceLayer : !!null null,
+  layers : [ {
+  ## Topografico layer
+    map_name : default,
+    layer_name : Topográfico-IDEE,
+    wms_layer : mtn_rasterizado,
+    wms_url : 'http://www.idee.es/wms/MTN-Raster/MTN-Raster',
+    visible: !!bool true,
+    layer_position : !!int 2,
+    parameters : {opacity : !!float 0.75, singleTile : !!bool false, projection : 'EPSG:23029'},
+    is_base : !!bool true
+  }, {
+  ## IGN Layer
+    map_name : default,
+    layer_name : IGN Base,
+    wms_layer : IGNBaseTodo,
+    wms_url : 'http://www.ign.es/wms-inspire/ign-base',
+    visible : !!bool true,
+    layer_position : !!int 1,
+    parameters : {opacity : !!float 0.75, singleTile : !!bool false, projection : 'EPSG:23029'},
+    is_base : !!bool true
+  } ]
+}
