--- a/test/spec/aux/map.controls.yaml
+++ b/test/spec/aux/map.controls.yaml
@@ -1,4 +1,7 @@
 ## Test YAML controls file
-controls:
-  - FakeMousePosition
-  - FakeNavigation
+{
+  controls: [
+    FakeMousePosition,
+    FakeNavigation
+  ]
+}
