--- a/test/spec/aux/map.options.yaml
+++ b/test/spec/aux/map.options.yaml
@@ -2,44 +2,53 @@
 ##########################
 
 ## General parameters
-general:
-  lang: es
-  height_map : 300
-  width_map  : 300
+{
+  general: {
+    lang: es,
+    height_map : !!int 300,
+    width_map  : !!int 300
+  },
   
   
-## Map specific parameters
-map_settings:
-  epsg  : 'EPSG:23029'
-  tile_size : 
-    - 512
-    - 512
-  units : m
-  bounds :
-    - 460000
-    - 4625000
-    - 690000
-    - 4855000
-  resolutions: 
-    - 611.4962262814
-    - 305.7481131407 
-    - 152.8740565704
-    - 76.4370282852
-    - 38.2185141426
-    - 19.1092570713
-    - 9.5546285356
-    - 4.7773142678
-    - 2.3886571339
-    - 1.1943285670 
-    - 0.5971642835
-    - 0.2985821417
+  ## Map specific parameters
+  map_settings: {
+    epsg  : 'EPSG:23029',
+    tile_size : [
+      !!int 512,
+      !!int 512
+    ],
+    units : m,
+    bounds : [
+      !!int 460000,
+      !!int 4625000,
+      !!int 690000,
+      !!int 4855000
+    ],
+    resolutions: [
+      !!float 611.4962262814,
+      !!float 305.7481131407,
+      !!float 152.8740565704,
+      !!float 76.4370282852,
+      !!float 38.2185141426,
+      !!float 19.1092570713,
+      !!float 9.5546285356,
+      !!float 4.7773142678,
+      !!float 2.3886571339,
+      !!float 1.1943285670,
+      !!float 0.5971642835,
+      !!float 0.2985821417
+    ],
+  },
     
-## View parameters
-view_settings :
-  bbox: 
-    - 460000
-    - 4625000
-    - 690000
-    - 4855000
-  zoom_level : 5
-  center : {lat: 0, lon: 0}
+  ## View parameters
+  view_settings : {
+    bbox: [
+      !!int 460000,
+      !!int 4625000,
+      !!int 690000,
+      !!int 4855000
+    ],
+    zoom_level : !!int 5,
+    center : {lat: !!float 0, lon: !!float 0}
+  }
+}
