First version of Navigation and Zoom controls.
There is still some work to do on them, but they
seem to work.

--- a/config/map.controls.yaml
+++ b/config/map.controls.yaml
@@ -1,6 +1,11 @@
 ## File with controls to add dinamically to app
 {
   controls: [
-    MousePosition
+    MousePosition,
+    Navigation,
+    NavigationHistory,
+    ZoomIn,
+    ZoomOut,
+    ZoomBox
   ]
 }
