--- a/config/map.controls.yaml
+++ b/config/map.controls.yaml
@@ -1,6 +1,8 @@
 ## File with controls to add dinamically to app
 {
   controls: [
+    Scale,
+    ScaleLine,
     MousePosition,
     Navigation,
     NavigationHistory,
