Internationalization messages now distributed.
Internationalization support has been improved
by using a jQuery external plugin that allows
to load new strings on the fly. This way the
controls can define their own internationaliza-
tion strings, which are now loaded from the
tag 'properties'. A json loaded by html tags
has been added for each locale, in order to
store the general purpose strings.

--- a/src/Control/ZoomBox/ZoomBox.yaml
+++ b/src/Control/ZoomBox/ZoomBox.yaml
@@ -1,3 +1,10 @@
 ## ZoomBox parameter control
 init:
-  title: $.i18n.prop("zoombox_tooltip")
+  title: $.i18n("zoombox_tooltip")
+properties:
+  'en':
+    'zoombox_tooltip': 'Zoom box'
+  'es':
+    'zoombox_tooltip': 'Zoom de caja'
+  'gl':
+    'zoombox_tooltip': 'Zoom de caixa'
