Changed config inter. to a more generic method
The method used for applying i18n to controls'
config parameters has been changed to a more
generic one that looks for 'eval(<command>)'
in the parameters, in order to execute those
commands.

--- a/src/Control/ZoomBox/ZoomBox.yaml
+++ b/src/Control/ZoomBox/ZoomBox.yaml
@@ -1,6 +1,6 @@
 ## ZoomBox parameter control
 init:
-  title: $.i18n("zoombox_tooltip")
+  title: eval($.i18n("zoombox_tooltip"))
 properties:
   'en':
     'zoombox_tooltip': 'Zoom box'
