Measure controls added.

--- a/config/map.controls.yaml
+++ b/config/map.controls.yaml
@@ -11,6 +11,8 @@
     ZoomBox,
     ZoomToMaxExtent,
     PermalinkButton,
-    HelpButton
+    HelpButton,
+    MeasureLine,
+    MeasureArea
   ]
 }
