Support for loading geojson layers.
Also added a json as an example layer.

--- a/config/map.layers.yaml
+++ b/config/map.layers.yaml
@@ -9,9 +9,10 @@
   ## Topografico layer
     map_name : default,
     group_name : capa_base,
+    type : 'wms',
     layer_name : Topográfico-IDEE,
     wms_layer : mtn_rasterizado,
-    wms_url : 'http://www.idee.es/wms/MTN-Raster/MTN-Raster',
+    url : 'http://www.idee.es/wms/MTN-Raster/MTN-Raster',
     visible: !!bool true,
     layer_position : !!int 1,
     parameters : {opacity : !!float 0.75, singleTile : !!bool false, projection : 'EPSG:23029'},
@@ -20,12 +21,26 @@
   ## IGN Layer
     map_name : default,
     group_name : capa_base,
+    type : 'wms',
     layer_name : IGN Base,
     wms_layer : IGNBaseTodo,
-    wms_url : 'http://www.ign.es/wms-inspire/ign-base',
+    url : 'http://www.ign.es/wms-inspire/ign-base',
     visible : !!bool true,
     layer_position : !!int 2,
     parameters : {opacity : !!float 0.75, singleTile : !!bool false, projection : 'EPSG:23029'},
     is_base : !!bool true
+  }, {
+  ## GeoJson Layer
+    map_name : default,
+    layer_name : GJson,
+    type : 'geojson',
+    url : 'config/layer.json',
+    parameters: {
+      group_name : prueba,
+      visibility : !!bool true,
+      layer_position : !!int 2,
+      projection : 'EPSG:23029',
+      isBaseLayer : !!bool false
+    }
   } ]
 }
