Static json as a new layer type.
Static json files can't be loaded with asynchronous
calls, so we had to add a new layer type for them.
Example has been updated according to this.

--- a/config/map.layers.yaml
+++ b/config/map.layers.yaml
@@ -55,7 +55,7 @@
   ## GeoJson AJAX Layer
   #  map_name : default,
   #  layer_name : GJson,
-  #  type : 'geojson',
+  #  type : 'ajax',
   #  url : 'http://127.0.0.1:8000/api/upai/?format=jsonp',
   #  parameters: {
   #    group_name : prueba,
