Map view settings application changed.
Now center and zoom are applied only when we
don't provide map extents.
Also changed the zoom parameter name in order
to use the same permalink does.

--- a/config/map.options.yaml
+++ b/config/map.options.yaml
@@ -48,7 +48,7 @@
       !!int 690000,
       !!int 4855000
     ],
-    zoom_level : !!int 5,
+    zoom : !!int 5,
     center : {lat: !!float 0, lon: !!float 0}
   }
 }
