Added control for drawing new features.
The example included creates points in the
GeoJson layer.

--- a/config/map.controls.yaml
+++ b/config/map.controls.yaml
@@ -1,18 +1,19 @@
 ## File with controls to add dinamically to app
 {
   controls: [
+    ZoomIn,
+    ZoomOut,
+    ZoomBox,
     Scale,
     ScaleLine,
     MousePosition,
     Navigation,
     NavigationHistory,
-    ZoomIn,
-    ZoomOut,
-    ZoomBox,
     ZoomToMaxExtent,
     PermalinkButton,
     HelpButton,
     MeasureLine,
-    MeasureArea
+    MeasureArea,
+    DrawFeature
   ]
 }
