Sample functions for calling after adding features
We have added example functions for the two ways
of calling a function after adding a feature: as
an event listener, and as a parameter of the con-
trol.

--- a/src/Control/DrawFeature/DrawFeature.yaml
+++ b/src/Control/DrawFeature/DrawFeature.yaml
@@ -3,3 +3,5 @@ init:
   layerName: 'GJson'
 ## Accepts 'point', 'path', 'polygon' and 'regularPolygon'
   featureType: 'point'
+  options:
+    featureAdded: eval(pointAdded)
