First version of the XVM as a mashup.
It includes absolute paths for all files, but
obviously they ones included are for my system,
so they should be changed to the proper ones
for each computer.

--- a/config/map.layers.yaml
+++ b/config/map.layers.yaml
@@ -42,7 +42,7 @@
     map_name : default,
     layer_name : GJson,
     type : 'geojson',
-    url : 'config/layer.json',
+    url : 'file:///home/jlopez/workspace-web/XVM/config/layer.json',
     parameters: {
       group_name : 'prueba/json',
       visibility : !!bool true,
