Controls now appear in the order they were listed.
Controls now appear from top to down in the order
they were listed in their yaml file. Order can
also be overwritten through field 'position'
in their yaml. ZoomIn uses this approach as an
example.

--- a/config/map.controls.yaml
+++ b/config/map.controls.yaml
@@ -1,22 +1,24 @@
 ## File with controls to add dinamically to app
-controls: [
+{
+  controls: [
     ZoomIn,
-    ZoomOut,
-    ZoomBox,
+    CustomLayerSwitcher,
     Scale,
     ScaleLine,
     MousePosition,
     Navigation,
-    NavigationHistory,
-    ZoomToMaxExtent,
-    PermalinkButton,
-    HelpButton,
-    MeasureLine,
-    MeasureArea,
     DrawFeature,
     DeleteFeature,
     ModifyFeature,
-    CustomLayerSwitcher
-  ]
-## Needs this to include TOC 
-TOC : false
+    HelpButton,
+    MeasureLine,
+    MeasureArea,
+    NavigationHistory,
+    PermalinkButton,
+    ZoomToMaxExtent,
+    ZoomBox,
+    ZoomOut
+  ],
+  ## Needs this to include TOC
+  TOC : !!bool false
+}
