--- a/config/map.options.yaml
+++ b/config/map.options.yaml
@@ -7,7 +7,8 @@
     lang: es,
     height_map : !!int 600,
     width_map  : !!int 800,
-    margin : !!int 0
+    margin : !!int 0,
+    proxy_host : '/cgi-bin/proxy.cgi?url='
   },
 
 
