--- a/src/Control/CustomLayerSwitcher/CustomLayerSwitcher.yaml
+++ b/src/Control/CustomLayerSwitcher/CustomLayerSwitcher.yaml
@@ -1,2 +1,13 @@
-## LayerSwitcher parameter control
+## CustomLayerSwitcher parameter control
 init:
+  firstBaseLayers: false
+properties:
+  'en':
+    'Base Layer': 'Base Layer'
+    'Overlays': 'Overlays'
+  'es':
+    'Base Layer': 'Capas base'
+    'Overlays': 'Capas superpuestas'
+  'gl':
+    'Base Layer': 'Capas base'
+    'Overlays': 'Capas superpostas'
