Navigation both integrated and with button.
Now the map has an integrated navigation control,
which will work with any other control that
doesn't require the same controls. Also added ano-
ther Navigation Control with a panel button so we
can always change to Navigation.

--- a/config/map.controls.yaml
+++ b/config/map.controls.yaml
@@ -8,6 +8,7 @@
     ScaleLine,
     MousePosition,
     Navigation,
+    NavigationButton,
     DrawFeature,
     DeleteFeature,
     ModifyFeature,
