Feature Info initialized with yaml file parameters
Like all the other controls, it gets the parameters
specified under init and provides them to the
init method.

--- a/src/Control/FeatureInfo/FeatureInfo.yaml
+++ b/src/Control/FeatureInfo/FeatureInfo.yaml
@@ -1,2 +1,14 @@
-## DrawFeature parameter control
+## FeatureInfo parameter control
 init:
+  infoFormat : 'application/vnd.ogc.gml'
+  url : ''
+  queryVisible : !!bool true
+  title: eval($.i18n('feature_info_tooltip'))
+properties:
+  'en':
+    'feature_info_tooltip': 'Feature Info'
+  'es':
+    'feature_info_tooltip': 'Datos de la entidad'
+  'gl':
+    'feature_info_tooltip': 'Datos da entidade'
+  
