Fix some conflicts in merge

--- a/demo/config/map.options.yaml
+++ b/demo/config/map.options.yaml
@@ -5,11 +5,11 @@
 {
   general: {
     lang: es,
-    height_map : !!int 600,
-    width_map  : !!int 800,
-    margin : !!int 0,
-    proxy_host : 'proxy/proxy.php?url='
+    height_map : !!int 500,
+    width_map  : !!int 500,
+    margin : !!int 0
   },
+
 
   ## Map specific parameters
   map_settings: {
