--- a/config/map.controls.yaml
+++ b/config/map.controls.yaml
@@ -1,22 +1,25 @@
 ## File with controls to add dinamically to app
-controls: [
+{
+  controls: [
+    FeatureInfo,
     ZoomIn,
-    ZoomOut,
-    ZoomBox,
+    #CustomLayerSwitcher,
     Scale,
     ScaleLine,
     MousePosition,
     Navigation,
-    NavigationHistory,
-    ZoomToMaxExtent,
-    PermalinkButton,
-    HelpButton,
-    MeasureLine,
-    MeasureArea,
     DrawFeature,
     DeleteFeature,
     ModifyFeature,
-    CustomLayerSwitcher
-  ]
-## Needs this to include TOC 
-TOC : true
+    HelpButton,
+    MeasureLine,
+    MeasureArea,
+    NavigationHistory,
+    PermalinkButton,
+    ZoomToMaxExtent,
+    ZoomBox,
+    ZoomOut
+  ],
+  ## Needs this to include TOC
+  TOC : !!bool true
+}
