--- a/config/map.layers.yaml
+++ b/config/map.layers.yaml
@@ -1,5 +1,7 @@
 # Layers parameters to map
 ##########################
+#### 
+## Small 'layer_position' means high position on the map
 {
   ## Layer service
   ## gets layers from URL with urlServiceLayer, it if '' or null 
@@ -9,19 +11,51 @@
   ## Topografico layer
     map_name : default,
     type : 'wms',
-    layer_name : Topográfico-IDEE,
+    layer_name : Topografico (MTN),
     wms_layer : mtn_rasterizado,
     url : 'http://www.idee.es/wms/MTN-Raster/MTN-Raster',
     parameters : {
       opacity : !!float 0.75,
       group_name : 'capa_base',
-      layer_position : !!int 1,
+      layer_position : !!int 501,
       singleTile : !!bool false,
       isBaseLayer : !!bool true,
-      visibility: !!bool true,
+      visibility: !!bool false,
       projection : 'EPSG:23029'
     }
   }, {
+  ## PNOA 2010-11
+    map_name : default,
+    type : 'wms',
+    layer_name : 'Ortofoto Reciente',
+    wms_layer : PNOA,
+    url : 'http://www.idee.es/wms/PNOA/PNOA',
+    parameters : {
+      opacity : !!float 0.75,
+      group_name : 'capa_base',
+      layer_position : !!int 502,
+      singleTile : !!bool false,
+      isBaseLayer : !!bool true,
+      visibility : !!bool false,
+      projection : 'EPSG:23029'
+    }
+  }, {
+  ## PNOA 2007-08
+    map_name : default,
+    type : 'wms',
+    layer_name : 'Ortofoto 07-08',
+    wms_layer : Ortofoto_2007_08,
+    url : 'http://ideg.xunta.es/wms_orto_2007-08/request.aspx',
+    parameters : {
+      opacity : !!float 0.75,
+      group_name : 'capa_base',
+      layer_position : !!int 503,
+      singleTile : !!bool false,
+      isBaseLayer : !!bool true,
+      visibility : !!bool true,
+      projection : 'EPSG:23029'
+    }
+  },{
   ## IGN Layer
     map_name : default,
     type : 'wms',
@@ -31,10 +65,81 @@
     parameters : {
       opacity : !!float 0.75,
       group_name : 'capa_base',
-      layer_position : !!int 2,
+      layer_position : !!int 504,
       singleTile : !!bool false,
       isBaseLayer : !!bool true,
-      visibility: !!bool true,
+      visibility : !!bool false,
+      projection : 'EPSG:23029'
+    }
+  },{
+  ## SITGA Toponimos
+    map_name : default,
+    type : 'wms',
+    layer_name : Toponimia,
+    wms_layer : 'NOMECONCELLO, Toponimia_txt_1_5000,
+                 TOPONIMIA_COSTA, TXT_CIDADES, 
+                 TXT_CIDADES_B, TXT_PARROQUIA, 
+                 TXT_VILAS',
+    url : 'http://ideg.xunta.es/wms/request.aspx',
+    parameters : {
+      opacity : !!float 0.95,
+      group_name : 'capa_aux',
+      layer_position : !!int 204,
+      singleTile : !!bool true,
+      isBaseLayer : !!bool false,
+      visibility : !!bool true,
+      projection : 'EPSG:23029',
+      queryable : false
+    }
+  }, {
+  ## SITGA Carreteras
+    map_name : default,
+    type : 'wms',
+    layer_name : 'Carreteras',
+    wms_layer : 'SECUNDARIA, AUTOESTRADA_AUTOVIA, REDE_ESTATAL, 
+                 PRIMARIA_BASICA, CORREDOR, PRIMARIA_COMPLEMENT',
+    url : 'http://ideg.xunta.es/wms/request.aspx',
+    parameters : {
+      opacity : !!float 0.75,
+      group_name : 'capa_aux',
+      layer_position : !!int 203,
+      singleTile : !!bool false,
+      isBaseLayer : !!bool false,
+      visibility : !!bool false,
+      projection : 'EPSG:23029',
+      queryable : false
+    }
+  },{
+  ## SITGA limites
+    map_name : default,
+    type : 'wms',
+    layer_name : 'Limites Admin',
+    wms_layer : 'PROVINCIA, CONCELLO, PARROQUIA',
+    url : 'http://ideg.xunta.es/wms/request.aspx',
+    parameters : {
+      opacity : !!float 0.75,
+      group_name : 'capa_aux',
+      layer_position : !!int 202,
+      singleTile : !!bool false,
+      isBaseLayer : !!bool false,
+      visibility : !!bool true,
+      projection : 'EPSG:23029',
+      queryable : false
+    }
+  }, {
+  ## Catastro
+    map_name : default,
+    type : 'wms',
+    layer_name : 'Catastro',
+    wms_layer : 'CATASTRO',
+    url : 'http://ovc.catastro.meh.es/Cartografia/WMS/ServidorWMS.aspx',
+    parameters : {
+      opacity : !!float 0.75,
+      group_name : 'capa_aux',
+      layer_position : !!int 201,
+      singleTile : !!bool false,
+      isBaseLayer : !!bool false,
+      visibility : !!bool false,
       projection : 'EPSG:23029'
     }
   }, {
@@ -46,7 +151,7 @@
     parameters: {
       group_name : 'json',
       visibility : !!bool true,
-      layer_position : !!int 2,
+      layer_position : !!int 50,
       projection : 'EPSG:23029',
       isBaseLayer : !!bool false
     }
