--- a/src/Control/FeatureInfo/FeatureInfo.yaml
+++ b/src/Control/FeatureInfo/FeatureInfo.yaml
@@ -1,6 +1,6 @@
 ## FeatureInfo parameter control
 init:
-  infoFormat : 'text/xml'
+  infoFormat : 'application/vnd.ogc.gml'
   url : ''
   queryVisible : !!bool true
   title: eval($.i18n('feature_info_tooltip'))
